--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom and JERRY</title>
-    <link rel="stylesheet" href="mole.css">
-    <script src="mole.js"></script>
+    <link rel="stylesheet" href="jerry.css">
+    <script src="tom.js"></script>
 </head>
 <body>
     <h1>TOM AND JERRY</h1>
